// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`email 1`] = `
"<!doctype html>
<html>
<body style="margin:0;padding:0;background:#ffffff;color:#111111;font:16px/1.5 -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial">
  <div style="max-width:640px;margin:0 auto;padding:20px">
    <div style="margin-top:18px">
      <div style="text-align:right;margin:8px 0 16px">
         <p style="margin:12px 0 16px;font:13px/1.4 -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Arial;color:#666">
           Trouble reading this?
            <a href="https://example.com/view-in-browser" target="_blank" rel="noopener"
               style="font:12px/1.2 -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Arial;color:#6b7280;text-decoration:underline">
              View in browser →
            </a>
         </p>
       </div>
      <p style="margin:0 0 12px">Hi Alice,</p>
      <p       style="padding: 0;
        margin: 0;
        
        
        Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: left;"
    >
      <span         style="font-weight: 400;
          text-decoration: none;
          vertical-align: baseline;
          
          Arial&quot;;
          font-style: normal;"
        >This is the next edition of my amazing newsletter. I use Inkling to
        send out my newsletter using Google Docs and GMail. It also has an
        online/web edition.</span>
    </p>
<h1       id="h.felr2761ljw5"
      style="
        padding-top: 24pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 20pt;
        padding-bottom: 6pt;
        line-height: 1.15;
        page-break-after: avoid;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span         style="
          color: #000000;
          font-weight: 700;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 23pt;
          font-family: &quot;Arial&quot;;
          font-style: normal;
        "
        >&#10024; Curiosities of the World</span>
    </h1><h2       id="h.9o4pl0z1a3hg"
      style="
        padding-top: 18pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 16pt;
        padding-bottom: 4pt;
        line-height: 1.15;
        page-break-after: avoid;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span         style="
          color: #000000;
          font-weight: 700;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 17pt;
          font-family: &quot;Arial&quot;;
          font-style: normal;
        "
        >&#127756; Science Spotlight</span>
    </h2><h3       id="h.9s4rmkzh70l7"
      style="
        padding-top: 12pt;
        margin: 0;
        color: #434343;
        padding-left: 0;
        font-size: 14pt;
        padding-bottom: 12pt;
        line-height: 1.15;
        page-break-after: avoid;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span style="font-weight: 700">Octopus Cities</span>
    </h3><p       style="
        padding-top: 12pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 11pt;
        padding-bottom: 12pt;
        font-family: &quot;Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span>Octopuses are normally solitary, but in </span><span style="font-weight: 700">Jervis Bay, Australia</span><span>, marine biologists discovered a place nicknamed </span><span style="font-style: italic">Octopolis</span><span         style="
          color: #000000;
          font-weight: 400;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 11pt;
          font-family: &quot;Arial&quot;;
          font-style: normal;
        "
        >. Dozens of gloomy octopuses live in dens made of shells, bicker with
        neighbors, and occasionally share space like an undersea city.</span>
    </p><p       style="
        padding-top: 12pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 11pt;
        padding-bottom: 12pt;
        font-family: &quot;Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span>&#128073; </span><span         style="
          text-decoration-skip-ink: none;
          -webkit-text-decoration-skip: none;
          color: #1155cc;
          text-decoration: underline;
        "
        ><a           href="https://www.google.com/url?q=https://www.theguardian.com/environment/shortcuts/2017/sep/18/octlantis-the-underwater-city-built-by-octopuses&amp;sa=D&amp;source=editors&amp;ust=1759322798683389&amp;usg=AOvVaw0Ixl5l9joaCaqWPWvSWais"
          style="color: inherit; text-decoration: inherit"
          >Read more</a></span>
    </p><h2       id="h.tdk4g5i4h2n2"
      style="
        padding-top: 18pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 16pt;
        padding-bottom: 4pt;
        line-height: 1.15;
        page-break-after: avoid;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span         style="
          color: #000000;
          font-weight: 700;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 17pt;
          font-family: &quot;Arial&quot;;
          font-style: normal;
        "
        >&#127926; Sound of the Week</span>
    </h2><h3       id="h.5bmj9irp4wnp"
      style="
        padding-top: 12pt;
        margin: 0;
        color: #434343;
        padding-left: 0;
        font-size: 14pt;
        padding-bottom: 12pt;
        line-height: 1.15;
        page-break-after: avoid;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span style="font-weight: 700">The World&rsquo;s Oldest Known Song</span>
    </h3><p       style="
        padding-top: 12pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 11pt;
        padding-bottom: 12pt;
        font-family: &quot;Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span         style="
          color: #000000;
          font-weight: 400;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 11pt;
          font-family: &quot;Arial&quot;;
          font-style: normal;
        "
        >On clay tablets from 3,400 years ago, archaeologists found musical
        notation &mdash; the Hymn of Ugarit. Reconstructed, it&rsquo;s haunting
        and beautiful.</span>
    </p><p       style="
        padding-top: 12pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 11pt;
        padding-bottom: 12pt;
        font-family: &quot;Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span>&#127911; </span><span         style="
          text-decoration-skip-ink: none;
          -webkit-text-decoration-skip: none;
          color: #1155cc;
          text-decoration: underline;
        "
        ><a           href="https://www.google.com/url?q=https://www.youtube.com/watch?v%3DBrvy4BbK2ZQ&amp;sa=D&amp;source=editors&amp;ust=1759322798684181&amp;usg=AOvVaw0jt1jB_162wP09jQu9hST0"
          style="color: inherit; text-decoration: inherit"
          >Listen here</a></span>
    </p><h2       id="h.8fkz8c8shpsn"
      style="
        padding-top: 18pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 16pt;
        padding-bottom: 4pt;
        line-height: 1.15;
        page-break-after: avoid;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span         style="
          color: #000000;
          font-weight: 700;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 17pt;
          font-family: &quot;Arial&quot;;
          font-style: normal;
        "
        >&#127812; Strange Nature</span>
    </h2><h3       id="h.jhsxeupdmwfp"
      style="
        padding-top: 12pt;
        margin: 0;
        color: #434343;
        padding-left: 0;
        font-size: 14pt;
        padding-bottom: 12pt;
        line-height: 1.15;
        page-break-after: avoid;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span style="font-weight: 700">Zombie-Ant Fungus</span>
    </h3><p       style="
        padding-top: 12pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 11pt;
        padding-bottom: 12pt;
        font-family: &quot;Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span         >A parasitic fungus takes over an ant&rsquo;s nervous system, forces it
        to climb a plant, and then sprouts from its head. It sounds like science
        fiction, but it&rsquo;s very real.</span><span         style="
          color: #000000;
          font-weight: 400;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 11pt;
          font-family: &quot;Arial&quot;;
          font-style: italic;
        "
        >&nbsp;</span>
    </p><p       style="
        padding-top: 12pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 11pt;
        padding-bottom: 12pt;
        font-family: &quot;Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: center;
        padding-right: 0;
      "
    >
      <span         style="
          overflow: hidden;
          display: inline-block;
          margin: 0px 0px;
          border: 0px solid #000000;
          transform: rotate(0rad) translateZ(0px);
          -webkit-transform: rotate(0rad) translateZ(0px);
          width: 302.85px;
          height: 436.1px;
        "
        ><img           alt=""
          src="https://lh7-rt.googleusercontent.com/docsz/AD_4nXdSEuQsCJVNrqfrEy5LM7mVzlIYbq_UhoFh4_S1h3d36vhnwY9wqny0PbpqHIeuWN2FoLZOGNAIoFRIcGVEgvkzTbzzSuuq4HEpmGPtum4E5DQCjQTmoSEUBNukvp76EuGEmshc?key=mF6i686YoF7ephScCfwvrQ"
          style="
            width: 302.85px;
            height: 436.1px;
            margin-left: 0px;
            margin-top: 0px;
            transform: rotate(0rad) translateZ(0px);
            -webkit-transform: rotate(0rad) translateZ(0px);
          "
          title=""
      ></span>
    </p><p       style="
        padding-top: 12pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 11pt;
        padding-bottom: 12pt;
        line-height: 1.15;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        height: 11pt;
        text-align: left;
        padding-right: 0;
      "
    >
      <span         style="
          color: #000000;
          font-weight: 400;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 11pt;
          font-family: &quot;Arial&quot;;
          font-style: normal;
        "
      ></span>
    </p>
<div style="font:12px/1.4 -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Arial;padding:10px 12px;border-top:1px solid #eee;margin-top:24px"><p       style="padding-top: 0pt;
        margin: 0;
        
        padding-left: 0;
        
        padding-bottom: 12pt;
        Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0"
    >
      <span>This is the </span><span style="font-weight: 700">footer section</span><span         style="font-weight: 400;
          text-decoration: none;
          vertical-align: baseline;
          
          Arial&quot;;
          font-style: normal"
        >. Inkling will automatically include it at the end of every
        edition:</span>
    </p><ul class="lst-kix_ylrpvt8ejlus-0 start" style="padding: 0; margin: 0">
      <li         style="padding-top: 12pt;
          
          padding-left: 0pt;
          
          padding-bottom: 12pt;
          line-height: 1.15;
          margin-right: 0;
          margin-left: 36pt;
          Arial&quot;;
          margin-top: 0;
          orphans: 2;
          margin-bottom: 0;
          widows: 2;
          text-align: left;
          padding-right: 0"
      >
        <span>&#9993;&#65039; Contact: </span><span           style="font-weight: 400;
            text-decoration: none;
            vertical-align: baseline;
            
            Roboto Mono&quot;;
            font-style: normal"
          >hello@example.com</span>
      </li>
      <li         style="padding-top: 12pt;
          
          padding-left: 0pt;
          
          padding-bottom: 12pt;
          line-height: 1.15;
          margin-right: 0;
          margin-left: 36pt;
          Arial&quot;;
          margin-top: 0;
          orphans: 2;
          margin-bottom: 0;
          widows: 2;
          text-align: left;
          padding-right: 0"
      >
        <span>&#127760; Website: </span><span           style="font-weight: 400;
            text-decoration: none;
            vertical-align: baseline;
            
            Roboto Mono&quot;;
            font-style: normal"
          >https://inkling-demo.netlify.app/</span>
      </li>
    </ul><p       style="padding: 0;
        margin: 0;
        
        
        Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: left"
    >
      <span         style="font-weight: 400;
          text-decoration: none;
          vertical-align: baseline;
          
          Arial&quot;;
          font-style: normal"
        >You can use this QR to pay!</span>
    </p><p       style="padding: 0;
        margin: 0;
        
        
        Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: center"
    >
      <span         style="overflow: hidden;
          display: inline-block;
          margin: 0px 0px;
          border: 0px solid #000000;
          transform: rotate(0rad) translateZ(0px);
          -webkit-transform: rotate(0rad) translateZ(0px);
          width: 74.5px;
          height: 99.33px"
        ><img           alt=""
          src="https://lh7-rt.googleusercontent.com/docsz/AD_4nXfIREqYBxITfVr5guOARXAznpXyWl53U3hFOGq69vMF3cPItAJ3DDHS_jam4GuWYJSv6ag9X677XdeLkuPCsq5FSa95tDabCulPRWyalA30FXU8uNJIJEvteKVsUpaGYL5jHkfE6g?key=mF6i686YoF7ephScCfwvrQ"
          style="width: 74.5px;
            height: 99.33px;
            margin-left: 0px;
            margin-top: 0px;
            transform: rotate(0rad) translateZ(0px);
            -webkit-transform: rotate(0rad) translateZ(0px)"
          title=""
      ></span>
    </p><hr></div>
    </div>
  </div>
</body>
</html>"
`;

exports[`index 1`] = `
"
    <h1 style="margin:0 0 12px">My Newsletter</h1>
    <ol style="padding-left:20px; line-height:1.7">  <li><a href="/article/curiosities-of-the-world.html" target="_top" rel="noopener">✨ Curiosities of the World</a></li>
  <li><a href="/article/odd-histories-lists.html" target="_top" rel="noopener">🌟 Odd Histories &amp; Lists</a></li>
  <li><a href="/article/short-sweet.html" target="_top" rel="noopener">📝 Short &amp; Sweet</a></li></ol>
  

    <form
        method="POST"
        action="https://script.google.com/macros/s/exec"
        onsubmit="this.return.value = location.href"
        target="_top"
        style="margin:32px 0;max-width:400px;padding:16px;border:1px solid #ddd;border-radius:8px;background:#f9f9f9;">

      <p style="margin:0 0 12px;font-size:14px;color:#555">
        Get future editions delivered to your inbox.
      </p>
      <div style="display:flex;gap:8px;flex-wrap:wrap">
        <input type="hidden" name="return" />
        <input type="hidden" name="phone" />
        <input type="text" name="name" placeholder="Your name (optional)"
          style="flex:1;min-width:160px;padding:8px;font:14px/1.4 -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Arial;border:1px solid #ccc;border-radius:4px" />
        <input type="email" name="email" placeholder="Your email address" required
          style="flex:1;min-width:160px;padding:8px;font:14px/1.4 -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Arial;border:1px solid #ccc;border-radius:4px" />
        <button type="submit"
          style="padding:8px 16px;font:14px/1.4 -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Arial;color:#fff;background-color:#0b66ff;border:none;border-radius:4px;cursor:pointer">
          Subscribe
        </button>
      </div>
    </form>
  "
`;

exports[`web 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width,initial-scale=1">
  
  <title>Welcome to my newsletter — My Newsletter</title>
  <style>
    :root{--muted:#666;--link:#0b66ff;--card:#fafafa;--max:760px;--code:#f6f8fa;--border:#eee}
    body{margin:0;background:var(--bg);color:var(--fg);font:16px/1.65 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
    .wrap{max-width:var(--max);margin:0 auto;padding:24px 16px 56px}
    header{display:flex;align-items:center;justify-content:space-between;margin-bottom:16px}
    .brand{font-weight:700}
    .doc h1{font-size:1.9rem;line-height:1.2;margin:.2em 0 .6em}
    .doc h2{font-size:1.45rem;line-height:1.3;margin:1.4em 0 .6em}
    .doc h3{font-size:1.18rem;line-height:1.3;margin:1.1em 0 .5em}
    .doc p{margin:.75em 0}
    .doc a{color:var(--link)}
    .doc ol,.doc ul{padding-left:1.2em}
    .doc li{margin:.25em 0}
    .doc hr{border:0;border-top:1px solid var(--border);margin:1.5rem 0}
    .doc blockquote{margin:1em 0;padding:.6em .9em;border-left:3px solid var(--border);background:var(--card);border-radius:10px}
    .doc pre,.doc code,.doc kbd{font:.92rem/1.5 ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono",monospace}
    .doc pre{background:var(--code);border:1px solid var(--border);padding:12px;border-radius:12px;overflow:auto}
    .doc img{max-width:100%;height:auto;border-radius:10px}
    .footer{margin-top:28px;font-size:.95rem;color:var(--muted)}
  </style>
  <style>
    @import url(https://themes.googleusercontent.com/fonts/css?kit=XGMkxXUZTA64h2imyzu79g);
      ul.lst-kix_ylrpvt8ejlus-8 {
        list-style-type: none;
      }
      ul.lst-kix_ylrpvt8ejlus-7 {
        list-style-type: none;
      }
      .lst-kix_5tr0n62s6c0o-8 > li:before {
        content: "" counter(lst-ctn-kix_5tr0n62s6c0o-8, lower-roman) ". ";
      }
      ul.lst-kix_ylrpvt8ejlus-6 {
        list-style-type: none;
      }
      ol.lst-kix_5tr0n62s6c0o-8.start {
        counter-reset: lst-ctn-kix_5tr0n62s6c0o-8 0;
      }
      ul.lst-kix_ylrpvt8ejlus-5 {
        list-style-type: none;
      }
      .lst-kix_5tr0n62s6c0o-3 > li {
        counter-increment: lst-ctn-kix_5tr0n62s6c0o-3;
      }
      .lst-kix_5tr0n62s6c0o-6 > li:before {
        content: "" counter(lst-ctn-kix_5tr0n62s6c0o-6, decimal) ". ";
      }
      .lst-kix_5tr0n62s6c0o-7 > li:before {
        content: "" counter(lst-ctn-kix_5tr0n62s6c0o-7, lower-latin) ". ";
      }
      .lst-kix_ixxj0loe0xol-3 > li:before {
        content: "●  ";
      }
      .lst-kix_ixxj0loe0xol-2 > li:before {
        content: "■  ";
      }
      .lst-kix_ixxj0loe0xol-4 > li:before {
        content: "○  ";
      }
      ol.lst-kix_5tr0n62s6c0o-5.start {
        counter-reset: lst-ctn-kix_5tr0n62s6c0o-5 0;
      }
      .lst-kix_ixxj0loe0xol-0 > li:before {
        content: "●  ";
      }
      .lst-kix_ixxj0loe0xol-1 > li:before {
        content: "○  ";
      }
      ol.lst-kix_5tr0n62s6c0o-2.start {
        counter-reset: lst-ctn-kix_5tr0n62s6c0o-2 0;
      }
      .lst-kix_ixxj0loe0xol-7 > li:before {
        content: "○  ";
      }
      ol.lst-kix_5tr0n62s6c0o-4.start {
        counter-reset: lst-ctn-kix_5tr0n62s6c0o-4 0;
      }
      .lst-kix_ixxj0loe0xol-6 > li:before {
        content: "●  ";
      }
      .lst-kix_ixxj0loe0xol-5 > li:before {
        content: "■  ";
      }
      .lst-kix_5tr0n62s6c0o-1 > li {
        counter-increment: lst-ctn-kix_5tr0n62s6c0o-1;
      }
      .lst-kix_5tr0n62s6c0o-7 > li {
        counter-increment: lst-ctn-kix_5tr0n62s6c0o-7;
      }
      .lst-kix_5tr0n62s6c0o-4 > li {
        counter-increment: lst-ctn-kix_5tr0n62s6c0o-4;
      }
      ol.lst-kix_5tr0n62s6c0o-1.start {
        counter-reset: lst-ctn-kix_5tr0n62s6c0o-1 0;
      }
      .lst-kix_ixxj0loe0xol-8 > li:before {
        content: "■  ";
      }
      .lst-kix_5tr0n62s6c0o-0 > li {
        counter-increment: lst-ctn-kix_5tr0n62s6c0o-0;
      }
      ol.lst-kix_5tr0n62s6c0o-3.start {
        counter-reset: lst-ctn-kix_5tr0n62s6c0o-3 0;
      }
      ol.lst-kix_5tr0n62s6c0o-8 {
        list-style-type: none;
      }
      ol.lst-kix_5tr0n62s6c0o-7 {
        list-style-type: none;
      }
      ol.lst-kix_5tr0n62s6c0o-6 {
        list-style-type: none;
      }
      ol.lst-kix_5tr0n62s6c0o-5 {
        list-style-type: none;
      }
      ul.lst-kix_ixxj0loe0xol-7 {
        list-style-type: none;
      }
      ol.lst-kix_5tr0n62s6c0o-0 {
        list-style-type: none;
      }
      .lst-kix_ylrpvt8ejlus-1 > li:before {
        content: "○  ";
      }
      ul.lst-kix_ixxj0loe0xol-8 {
        list-style-type: none;
      }
      ul.lst-kix_ixxj0loe0xol-5 {
        list-style-type: none;
      }
      ul.lst-kix_ixxj0loe0xol-6 {
        list-style-type: none;
      }
      ul.lst-kix_ixxj0loe0xol-3 {
        list-style-type: none;
      }
      ol.lst-kix_5tr0n62s6c0o-4 {
        list-style-type: none;
      }
      ul.lst-kix_ixxj0loe0xol-4 {
        list-style-type: none;
      }
      ol.lst-kix_5tr0n62s6c0o-3 {
        list-style-type: none;
      }
      ul.lst-kix_ixxj0loe0xol-1 {
        list-style-type: none;
      }
      ol.lst-kix_5tr0n62s6c0o-2 {
        list-style-type: none;
      }
      .lst-kix_ylrpvt8ejlus-0 > li:before {
        content: "●  ";
      }
      ul.lst-kix_ixxj0loe0xol-2 {
        list-style-type: none;
      }
      ol.lst-kix_5tr0n62s6c0o-1 {
        list-style-type: none;
      }
      ul.lst-kix_ixxj0loe0xol-0 {
        list-style-type: none;
      }
      ol.lst-kix_5tr0n62s6c0o-7.start {
        counter-reset: lst-ctn-kix_5tr0n62s6c0o-7 0;
      }
      .lst-kix_5tr0n62s6c0o-6 > li {
        counter-increment: lst-ctn-kix_5tr0n62s6c0o-6;
      }
      .lst-kix_ylrpvt8ejlus-8 > li:before {
        content: "■  ";
      }
      .lst-kix_5tr0n62s6c0o-5 > li {
        counter-increment: lst-ctn-kix_5tr0n62s6c0o-5;
      }
      .lst-kix_ylrpvt8ejlus-3 > li:before {
        content: "●  ";
      }
      ol.lst-kix_5tr0n62s6c0o-0.start {
        counter-reset: lst-ctn-kix_5tr0n62s6c0o-0 0;
      }
      .lst-kix_5tr0n62s6c0o-2 > li {
        counter-increment: lst-ctn-kix_5tr0n62s6c0o-2;
      }
      .lst-kix_ylrpvt8ejlus-2 > li:before {
        content: "■  ";
      }
      .lst-kix_5tr0n62s6c0o-1 > li:before {
        content: "" counter(lst-ctn-kix_5tr0n62s6c0o-1, lower-latin) ". ";
      }
      .lst-kix_5tr0n62s6c0o-0 > li:before {
        content: "" counter(lst-ctn-kix_5tr0n62s6c0o-0, decimal) ". ";
      }
      .lst-kix_5tr0n62s6c0o-2 > li:before {
        content: "" counter(lst-ctn-kix_5tr0n62s6c0o-2, lower-roman) ". ";
      }
      ol.lst-kix_5tr0n62s6c0o-6.start {
        counter-reset: lst-ctn-kix_5tr0n62s6c0o-6 0;
      }
      .lst-kix_5tr0n62s6c0o-8 > li {
        counter-increment: lst-ctn-kix_5tr0n62s6c0o-8;
      }
      .lst-kix_ylrpvt8ejlus-4 > li:before {
        content: "○  ";
      }
      .lst-kix_5tr0n62s6c0o-5 > li:before {
        content: "" counter(lst-ctn-kix_5tr0n62s6c0o-5, lower-roman) ". ";
      }
      ul.lst-kix_ylrpvt8ejlus-0 {
        list-style-type: none;
      }
      .lst-kix_ylrpvt8ejlus-5 > li:before {
        content: "■  ";
      }
      .lst-kix_5tr0n62s6c0o-4 > li:before {
        content: "" counter(lst-ctn-kix_5tr0n62s6c0o-4, lower-latin) ". ";
      }
      .lst-kix_5tr0n62s6c0o-3 > li:before {
        content: "" counter(lst-ctn-kix_5tr0n62s6c0o-3, decimal) ". ";
      }
      ul.lst-kix_ylrpvt8ejlus-4 {
        list-style-type: none;
      }
      .lst-kix_ylrpvt8ejlus-7 > li:before {
        content: "○  ";
      }
      ul.lst-kix_ylrpvt8ejlus-3 {
        list-style-type: none;
      }
      ul.lst-kix_ylrpvt8ejlus-2 {
        list-style-type: none;
      }
      .lst-kix_ylrpvt8ejlus-6 > li:before {
        content: "●  ";
      }
      ul.lst-kix_ylrpvt8ejlus-1 {
        list-style-type: none;
      }
  </style>
</head>
<body>
  <div class="wrap">
    <header><div class="brand"><a href="/" target="_top">My Newsletter</a></div></header>
    <main class="doc">
      <h1       id="h.felr2761ljw5"
      style="
        padding-top: 24pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 20pt;
        padding-bottom: 6pt;
        line-height: 1.15;
        page-break-after: avoid;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span         style="
          color: #000000;
          font-weight: 700;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 23pt;
          font-family: &quot;Arial&quot;;
          font-style: normal;
        "
        >&#10024; Curiosities of the World</span>
    </h1><h2       id="h.9o4pl0z1a3hg"
      style="
        padding-top: 18pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 16pt;
        padding-bottom: 4pt;
        line-height: 1.15;
        page-break-after: avoid;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span         style="
          color: #000000;
          font-weight: 700;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 17pt;
          font-family: &quot;Arial&quot;;
          font-style: normal;
        "
        >&#127756; Science Spotlight</span>
    </h2><h3       id="h.9s4rmkzh70l7"
      style="
        padding-top: 12pt;
        margin: 0;
        color: #434343;
        padding-left: 0;
        font-size: 14pt;
        padding-bottom: 12pt;
        line-height: 1.15;
        page-break-after: avoid;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span style="font-weight: 700">Octopus Cities</span>
    </h3><p       style="
        padding-top: 12pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 11pt;
        padding-bottom: 12pt;
        font-family: &quot;Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span>Octopuses are normally solitary, but in </span><span style="font-weight: 700">Jervis Bay, Australia</span><span>, marine biologists discovered a place nicknamed </span><span style="font-style: italic">Octopolis</span><span         style="
          color: #000000;
          font-weight: 400;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 11pt;
          font-family: &quot;Arial&quot;;
          font-style: normal;
        "
        >. Dozens of gloomy octopuses live in dens made of shells, bicker with
        neighbors, and occasionally share space like an undersea city.</span>
    </p><p       style="
        padding-top: 12pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 11pt;
        padding-bottom: 12pt;
        font-family: &quot;Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span>&#128073; </span><span         style="
          text-decoration-skip-ink: none;
          -webkit-text-decoration-skip: none;
          color: #1155cc;
          text-decoration: underline;
        "
        ><a           href="https://www.google.com/url?q=https://www.theguardian.com/environment/shortcuts/2017/sep/18/octlantis-the-underwater-city-built-by-octopuses&amp;sa=D&amp;source=editors&amp;ust=1759322798683389&amp;usg=AOvVaw0Ixl5l9joaCaqWPWvSWais"
          style="color: inherit; text-decoration: inherit"
          >Read more</a></span>
    </p><h2       id="h.tdk4g5i4h2n2"
      style="
        padding-top: 18pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 16pt;
        padding-bottom: 4pt;
        line-height: 1.15;
        page-break-after: avoid;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span         style="
          color: #000000;
          font-weight: 700;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 17pt;
          font-family: &quot;Arial&quot;;
          font-style: normal;
        "
        >&#127926; Sound of the Week</span>
    </h2><h3       id="h.5bmj9irp4wnp"
      style="
        padding-top: 12pt;
        margin: 0;
        color: #434343;
        padding-left: 0;
        font-size: 14pt;
        padding-bottom: 12pt;
        line-height: 1.15;
        page-break-after: avoid;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span style="font-weight: 700">The World&rsquo;s Oldest Known Song</span>
    </h3><p       style="
        padding-top: 12pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 11pt;
        padding-bottom: 12pt;
        font-family: &quot;Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span         style="
          color: #000000;
          font-weight: 400;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 11pt;
          font-family: &quot;Arial&quot;;
          font-style: normal;
        "
        >On clay tablets from 3,400 years ago, archaeologists found musical
        notation &mdash; the Hymn of Ugarit. Reconstructed, it&rsquo;s haunting
        and beautiful.</span>
    </p><p       style="
        padding-top: 12pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 11pt;
        padding-bottom: 12pt;
        font-family: &quot;Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span>&#127911; </span><span         style="
          text-decoration-skip-ink: none;
          -webkit-text-decoration-skip: none;
          color: #1155cc;
          text-decoration: underline;
        "
        ><a           href="https://www.google.com/url?q=https://www.youtube.com/watch?v%3DBrvy4BbK2ZQ&amp;sa=D&amp;source=editors&amp;ust=1759322798684181&amp;usg=AOvVaw0jt1jB_162wP09jQu9hST0"
          style="color: inherit; text-decoration: inherit"
          >Listen here</a></span>
    </p><h2       id="h.8fkz8c8shpsn"
      style="
        padding-top: 18pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 16pt;
        padding-bottom: 4pt;
        line-height: 1.15;
        page-break-after: avoid;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span         style="
          color: #000000;
          font-weight: 700;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 17pt;
          font-family: &quot;Arial&quot;;
          font-style: normal;
        "
        >&#127812; Strange Nature</span>
    </h2><h3       id="h.jhsxeupdmwfp"
      style="
        padding-top: 12pt;
        margin: 0;
        color: #434343;
        padding-left: 0;
        font-size: 14pt;
        padding-bottom: 12pt;
        line-height: 1.15;
        page-break-after: avoid;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span style="font-weight: 700">Zombie-Ant Fungus</span>
    </h3><p       style="
        padding-top: 12pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 11pt;
        padding-bottom: 12pt;
        font-family: &quot;Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;
      "
    >
      <span         >A parasitic fungus takes over an ant&rsquo;s nervous system, forces it
        to climb a plant, and then sprouts from its head. It sounds like science
        fiction, but it&rsquo;s very real.</span><span         style="
          color: #000000;
          font-weight: 400;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 11pt;
          font-family: &quot;Arial&quot;;
          font-style: italic;
        "
        >&nbsp;</span>
    </p><p       style="
        padding-top: 12pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 11pt;
        padding-bottom: 12pt;
        font-family: &quot;Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: center;
        padding-right: 0;
      "
    >
      <span style="overflow: hidden;
          display: inline-block;
          margin: 0px 0px;
          border: 0px solid #000000;
          transform: rotate(0rad) translateZ(0px);
          -webkit-transform: rotate(0rad) translateZ(0px);;width:48.53%"><img alt src="https://lh7-rt.googleusercontent.com/docsz/AD_4nXdSEuQsCJVNrqfrEy5LM7mVzlIYbq_UhoFh4_S1h3d36vhnwY9wqny0PbpqHIeuWN2FoLZOGNAIoFRIcGVEgvkzTbzzSuuq4HEpmGPtum4E5DQCjQTmoSEUBNukvp76EuGEmshc?key=mF6i686YoF7ephScCfwvrQ" style="margin-left: 0px;
            margin-top: 0px;
            transform: rotate(0rad) translateZ(0px);
            -webkit-transform: rotate(0rad) translateZ(0px);" title></span>
    </p><p       style="
        padding-top: 12pt;
        margin: 0;
        color: #000000;
        padding-left: 0;
        font-size: 11pt;
        padding-bottom: 12pt;
        line-height: 1.15;
        font-family: &quot;Arial&quot;;
        orphans: 2;
        widows: 2;
        height: 11pt;
        text-align: left;
        padding-right: 0;
      "
    >
      <span         style="
          color: #000000;
          font-weight: 400;
          text-decoration: none;
          vertical-align: baseline;
          font-size: 11pt;
          font-family: &quot;Arial&quot;;
          font-style: normal;
        "
      ></span>
    </p>
      <div class="footer"><div style="font:12px/1.4 -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Arial;padding:10px 12px;border-top:1px solid #eee;margin-top:24px;"><p       style="padding-top: 0pt;
        margin: 0;
        
        padding-left: 0;
        
        padding-bottom: 12pt;
        Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: left;
        padding-right: 0;"
    >
      <span>This is the </span><span style="font-weight: 700">footer section</span><span         style="font-weight: 400;
          text-decoration: none;
          vertical-align: baseline;
          
          Arial&quot;;
          font-style: normal;"
        >. Inkling will automatically include it at the end of every
        edition:</span>
    </p><ul class="lst-kix_ylrpvt8ejlus-0 start" style="padding: 0; margin: 0">
      <li         style="padding-top: 12pt;
          
          padding-left: 0pt;
          
          padding-bottom: 12pt;
          line-height: 1.15;
          margin-right: 0;
          margin-left: 36pt;
          Arial&quot;;
          margin-top: 0;
          orphans: 2;
          margin-bottom: 0;
          widows: 2;
          text-align: left;
          padding-right: 0;"
      >
        <span>&#9993;&#65039; Contact: </span><span           style="font-weight: 400;
            text-decoration: none;
            vertical-align: baseline;
            
            Roboto Mono&quot;;
            font-style: normal;"
          >hello@example.com</span>
      </li>
      <li         style="padding-top: 12pt;
          
          padding-left: 0pt;
          
          padding-bottom: 12pt;
          line-height: 1.15;
          margin-right: 0;
          margin-left: 36pt;
          Arial&quot;;
          margin-top: 0;
          orphans: 2;
          margin-bottom: 0;
          widows: 2;
          text-align: left;
          padding-right: 0;"
      >
        <span>&#127760; Website: </span><span           style="font-weight: 400;
            text-decoration: none;
            vertical-align: baseline;
            
            Roboto Mono&quot;;
            font-style: normal;"
          >https://inkling-demo.netlify.app/</span>
      </li>
    </ul><p       style="padding: 0;
        margin: 0;
        
        
        Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: left;"
    >
      <span         style="font-weight: 400;
          text-decoration: none;
          vertical-align: baseline;
          
          Arial&quot;;
          font-style: normal;"
        >You can use this QR to pay!</span>
    </p><p       style="padding: 0;
        margin: 0;
        
        
        Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        text-align: center;"
    >
      <span style="overflow: hidden;
          display: inline-block;
          margin: 0px 0px;
          border: 0px solid #000000;
          transform: rotate(0rad) translateZ(0px);
          -webkit-transform: rotate(0rad) translateZ(0px);;width:11.94%"><img alt src="https://lh7-rt.googleusercontent.com/docsz/AD_4nXfIREqYBxITfVr5guOARXAznpXyWl53U3hFOGq69vMF3cPItAJ3DDHS_jam4GuWYJSv6ag9X677XdeLkuPCsq5FSa95tDabCulPRWyalA30FXU8uNJIJEvteKVsUpaGYL5jHkfE6g?key=mF6i686YoF7ephScCfwvrQ" style="margin-left: 0px;
            margin-top: 0px;
            transform: rotate(0rad) translateZ(0px);
            -webkit-transform: rotate(0rad) translateZ(0px)" title></span>
    </p><p       style="padding-top: 12pt;
        
        padding-left: 0;
        
        padding-bottom: 12pt;
        line-height: 1.15;
        margin-right: 0;
        margin-left: 36pt;
        Arial&quot;;
        margin-top: 0;
        orphans: 2;
        margin-bottom: 0;
        widows: 2;
        height: 11pt;
        text-align: left;
        padding-right: 0;"
    >
      
    </p><hr><p       style="padding: 0;
        margin: 0;
        
        
        Arial&quot;;
        line-height: 1.15;
        orphans: 2;
        widows: 2;
        height: 11pt;
        text-align: left;"
    >
      
    </p></div></div>
    </main>
  </div>
</body>
</html>"
`;
